--- a/src/(components)/Nav.css
+++ b/src/(components)/Nav.css
@@ -6,6 +6,7 @@
     display:flex;
     margin: 2em 7em;
     background-color: var(--dark);
+    opacity: 90%;
     padding: 1em 2em;
     border-radius: 50em;
     z-index: 1;
@@ -51,43 +52,59 @@
 }
 
 .btn {
+  position: relative;
   border: none;
   outline: none;
-  position: relative;
-  z-index: 1;
+  padding: 3px 12px;
   border-radius: 5px;
-  padding: 3px;
-  background: linear-gradient(to right, #00FFA3, #DC1FFF);
+  background: transparent;
   cursor: pointer;
+  z-index: 1;
+  overflow: hidden;
 }
 .btn::before {
   content: "";
   position: absolute;
-  left: 1px;
-  right: 1px;
-  top: 1px;
-  bottom: 1px;
-  border-radius: 4px;
-  background-color: var(--dark);
-  z-index: -1;
-  transition: 200ms
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(to right, #00FFA3, #DC1FFF);
+  z-index: -2;
+  border-radius: 5px;
 }
 .btn::after {
   content: attr(data);
-  font-size: 16px;
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  right: 1px;
+  bottom: 1px;
+  background-color: var(--dark);
+  border-radius: 4px;
+  z-index: -1;
+  transition: all 0.6s ease-in-out;
+  transform: scaleX(1);
+  transform-origin: right;
+}
+
+
+/* Text layer */
+.btn span {
+  position: relative;   
   background: linear-gradient(to left, #00FFA3, #DC1FFF);
   -webkit-background-clip: text;
   color: transparent;
-  transition: 200ms
+  transition: color 0.3s ease-in-out;
 }
-.btn:hover::before {
-  opacity: 50%;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
+
+/* On hover: reveal full border from left to right */
+.btn:hover::after {
+  transform: scaleX(0);
 }
-.btn:hover::after{
+
+.btn:hover span {
   color: white;
 }
 
