--- a/src/(components)/Hamburger.css
+++ b/src/(components)/Hamburger.css
@@ -1,24 +1,24 @@
 .top-bars {
-    stroke: #252468;;
+    stroke: #ffffff; /* Changed to white */
     transition: stroke 400ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+}
 
-  .bar {
+.bar {
     transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+}
 
-  .bar1 {
+.bar1 {
     transform-origin: 18px 8.5px;
-  }
+}
 
-  .bar2 {
+.bar2 {
     transform-origin: 18px 16.5px;
-  }
+}
 
-  .active .bar1 {
+.active .bar1 {
     transform: translateY(8.6px) rotate(45deg);
-  }
+}
 
-  .active .bar2 {
+.active .bar2 {
     transform: rotate(-45deg);
-  }
+}
